--- a/package.json
+++ b/package.json
@@ -19,12 +19,22 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "@capacitor/android": "^2.4.0",
     "@capacitor/core": "2.4.0",
+    "@capacitor/ios": "^2.4.0",
+    "@ionic-native/barcode-scanner": "^5.28.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@kushki/js": "^1.19.1",
+    "crypto-js": "^4.0.0",
+    "izimodal": "^1.5.1",
+    "mercadopago": "^1.3.2",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
+    "scriptjs": "^2.5.9",
+    "sweetalert": "^2.1.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -52,5 +62,10 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "phonegap-plugin-barcodescanner": {}
+    }
+  }
 }
